[tool.poetry]
name = "redis_samples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^22.12.0"
redis = "^4.4.0"
pandas = "^1.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
